--- a/Stroke_Events.ipynb
+++ b/Stroke_Events.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "### Data Details:\n",
     "\n",
-    "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately <font color='red'>**11%**</font> of total deaths.This dataset is used to analyze in depth key factors that may be contributing to stroke events based on the input parameters like gender, age, various diseases, and smoking status. Each row in the data provides relavant information about the patient."
+    "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately <font color='red'>**11%**</font> of total deaths.This dataset is used to analyze in depth key factors that may be contributing to stroke events based on the input parameters like gender, age, various diseases, and smoking status. Each row in the data provides relevant information about the patient."
    ]
   },
   {
